[package]
name = "integration"
version = "0.1.0"
authors = ["NoCtrlZ <phantomofrotten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
rand = "0.7"
