[package]
name = "transaction"
version = "0.1.0"
authors = ["NoCtrlZ <phantomofrotten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = { version = "4", features = ["std"] }
rand = "0.7"
rust-crypto = "0.2"
rustc-hex = "1.0"
base64 = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
