[package]
name = "wallet"
version = "0.1.0"
authors = ["NoCtrlZ <phantomofrotten@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bigint = "4"
rand = "0.7"
rust-crypto = "0.2"
rustc-hex = "1.0"
base64 = "0.12.0"
